update for subroutine training

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .pyenv/
 */__pycache__/
-environments/__pycache__/
-utils/__pycache__/
 slurm*.out
 saved_models/cube3/*
+saved_models/cube3_subroutines/*
